# krita-certified-human-made

./: .gitignore  BFROS-LOGGING-ADDED.md  CONTRIBUTING.md  CREATE-GITHUB-RELEASE.md  Cargo.toml  DEV-SETUP-COMPLETE.md  ENVIRONMENT-TESTING-READY.md  GITHUB-RELEASE-BODY.md  LICENSE  QUICK-FIX-API-URL.md  README.md  RELEASE-CHECKLIST.md  RELEASE-NOTES-v1.0.0.md  RELEASE-QUICK-START.md  SSL-FIX-AND-DNS-ISSUE.md  TESTING-QUICK-START.md  build-for-krita.sh  dev-update-plugin.sh  install-plugin.sh  release.sh
debug/: detect-krita-python.py  diagnose-verification-failure.sh  find-replit-url.md  fix-macos-signature.sh  fix-plugin-greyed-out.sh  inspect-kra-references.py  set-dev-api-url.sh  set-environment.sh  show-current-config.sh  test-afk-detection.py  test-ai-plugin-detection.py  test-api-client-signing.py  test-c2pa-in-krita.py  test-c2pa-install.py  test-c2pa-png.py  test-c2pa-privacy-audit.py  test-embedded-signing-key.py  test-github-gist-timestamp.py  test-hash-normalization.sh  test-local-backend.sh  test-metadata-tamper-resistance.py  test-plugin-import.py  test-plugin-load.py  test-png-metadata.py  test-prod-backend.sh  test-reference-images-api.py  test-server-key-status.sh  test-undo-redo-api.py  test-uuid-session-keys.py  verify-plugin-installation.sh
docs/: rust-binding-todo.md
krita-plugin/: ARCHITECTURE.md  INSTALLATION.md  QUICKSTART.md  README.md  chm_manual.html  chm_verifier.desktop
scripts/: create-bug-report.js  create-release.sh  generate-signing-key.py  package-release.sh
src/: __init__.py  analysis.rs  crypto.rs  error.rs  events.rs  lib.rs  (+3 more)
(+41 files in other folders)
