[package]
name = "certified-human-made"
version = "0.1.0"
edition = "2021"
authors = ["CHM Project Contributors"]
description = "Rust core library for Certified Human-Made art verification"
license = "GPL-3.0"
repository = "https://github.com/[username]/certified-human-made"

[lib]
name = "chm"
crate-type = ["cdylib", "rlib"]  # cdylib for Python bindings, rlib for testing

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing for tracing detection (perceptual hashing)
image = "0.24"
img_hash = "3.2"

# HTTP client for timestamp services + plugin registry
reqwest = { version = "0.11", features = ["json", "blocking"] }
octocrab = "0.32"  # GitHub API client

# Async runtime for parallel timestamp submissions
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"

# Hex encoding for hashes
hex = "0.4"

# URL handling for Wayback Machine
url = "2.5"

[dev-dependencies]
mockito = "1.2"  # For mocking HTTP requests in tests

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

